Component alignment issue solved

--- a/client/src/styles/pages/BlogList.scss
+++ b/client/src/styles/pages/BlogList.scss
@@ -15,8 +15,6 @@
 .box .card {
   height: 351px;
   left: 0;
-  position: fixed;
-  top: 0;
   width: 270px;
 }
 
